# Memex

./: .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.mcp  README.md  deploy.sh  docker-compose.yml  projects.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
.memex/: universe_config.json
.obsidian/: graph.json
dashboard/: build.py  index.html  index_strategy.py  llm_provider.py  models.py  project_registry.py  provenance.py  scheduler.py  server.py  settings.py  wiki_extensions.py  wiki_ops.py
dashboard/evidence/: __init__.py  health.py  registry.py  scanner.py  validator.py
dashboard/graph/: __init__.py  builder.py  community.py  paths.py
dashboard/llm/: prompts.py
docs/: mcp-configuration.md  mcp-server-deployment.md
logs/: 2026-04-23.md  2026-04-24.md
mcp-server/: __init__.py  memex_mcp.py  requirements-graph.txt  requirements.txt
nginx/: nginx.conf  nginx.conf.template
plans/: architecture-multiproject.md  backlog.md  blocked.md  today-queue.md  功能优化完成总结.md  项目缺陷与助手定位分析.md
raw/: pkms-system-design.md
scripts/: deploy-direct-http.sh  deploy-http-nginx.sh  deploy-ssh-stdio.sh  install-memex-cli-wrappers.sh  memex-claude-vendor.sh  memex-claw-vendor.sh
templates/: CLAUDE.md
tests/: test_dashboard_raw_api.py  test_dashboard_schedules_api.py  test_dashboard_settings_api.py  test_dashboard_wiki_api.py  test_project_registry_health.py
wiki/: _worktree_test.md  index.html  index.md  log.md  pkms-graph-engine.md  pkms-ingestion-pipeline.md  pkms-query-engine.md  source-pkms-system-design.md
(+302 files in other folders)
